# kit-lang

./: .gitignore  README.md  main  meson.build  test.kit
example/: abs.kit  biggest.kit
kit-assembler/: meson.build
kit-assembler/src/: constants.hpp  main.cpp
kit-assembler/src/assembler/: assembler.cpp  assembler.hpp  modrm.hpp  reallocation.hpp  segment.hpp  sib.hpp  symbol.hpp
kit-assembler/src/assembler/instruction_set/: add.cpp  add.hpp  cmp.cpp  cmp.hpp  copy.cpp  copy.hpp  in.cpp  in.hpp  jcc.hpp  jmp.hpp  mul.cpp  mul.hpp  out.cpp  out.hpp  sub.cpp  sub.hpp  utils.cpp  utils.hpp  wb.cpp  wb.hpp
kit-assembler/src/lexer/: lexer.cpp  lexer.hpp  token.hpp
kit-assembler/src/linker/: linker.hpp
kit-assembler/src/parser/: opcode.hpp  opcode_table.hpp  parser.cpp  register.hpp  statement.hpp
kit-assembler/src/platform/: platform.hpp
kit-assembler/src/platform/linux/: executable.cpp
kit-assembler/src/utils/: file.hpp
kit-compiler/: meson.build
kit-compiler/src/: common.hpp  constants.hpp  main.cpp
kit-compiler/src/compiler/: compiler.cpp  compiler.hpp  linker.hpp  modrm.hpp  reallocation.hpp  section_info.hpp  segment.hpp
kit-compiler/src/compiler/instruction_set/: add.cpp  add.hpp  copy.cpp  copy.hpp  in.cpp  in.hpp  jmp.hpp  mul.cpp  mul.hpp  out.cpp  out.hpp  sub.cpp  sub.hpp  utils.cpp  utils.hpp  wb.cpp  wb.hpp
kit-compiler/src/lexer/: lexer.cpp  lexer.hpp  token.hpp
kit-compiler/src/parser/: instruction.hpp  opcode.hpp  opcode_table.hpp  parser.cpp  parser.hpp  statement.hpp
kit-compiler/src/platform/: platform.hpp
kit-compiler/src/platform/linux/: executable.cpp
kit-compiler/src/utils/: memory_utils.hpp  string_utils.hpp
scripts/: build  configure  setup
